--- a/.github/workflows/spring_integration_test_1.yml
+++ b/.github/workflows/spring_integration_test_1.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
+          java-version: '17'
           distribution: 'adopt'
           cache: maven
       - name: cache agent
@@ -91,14 +91,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - springBootVersion: "1.5.0.RELEASE"
-            springCloudVersion: "Edgware.SR2"
-            nacosVersion: "1.5.0.RELEASE"
-          - springBootVersion: "2.0.2.RELEASE"
-            springCloudVersion: "Finchley.RELEASE"
-            httpClientVersion: "4.1.3"
-            nacosVersion: "2.0.0.RELEASE"
-            jettyClientVersion: "1.0.1"
+#          - springBootVersion: "1.5.0.RELEASE"
+#            springCloudVersion: "Edgware.SR2"
+#            nacosVersion: "1.5.0.RELEASE"
+#          - springBootVersion: "2.0.2.RELEASE"
+#            springCloudVersion: "Finchley.RELEASE"
+#            httpClientVersion: "4.1.3"
+#            nacosVersion: "2.0.0.RELEASE"
+#            jettyClientVersion: "1.0.1"
           - springBootVersion: "2.1.0.RELEASE"
             springCloudVersion: "Greenwich.RELEASE"
             httpClientVersion: "4.2.6"
@@ -135,21 +135,21 @@ jobs:
           fetch-depth: 100
       - name: set java version to environment
         run: |
-          echo "javaVersion=8" >> $GITHUB_ENV
+          echo "javaVersion=17" >> $GITHUB_ENV
       - name: common operations
         uses: ./.github/actions/common/spring
-      - name: (graceful) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableGraceful == 'true'
-        uses: ./.github/actions/scenarios/spring/graceful
-      - name: (spring common) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableSpringCommon == 'true'
-        uses: ./.github/actions/scenarios/spring/spring-common
-      - name: (nacos dynamic config) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: ${{ matrix.nacosVersion != '' && env.enableDynamicConfig == 'true' }}
-        uses: ./.github/actions/scenarios/spring/dynamic-config-nacos
-      - name: (zk dynamic config) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableDynamicConfig == 'true'
-        uses: ./.github/actions/scenarios/spring/dynamic-config-zk
+#      - name: (graceful) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
+#        if: env.enableGraceful == 'true'
+#        uses: ./.github/actions/scenarios/spring/graceful
+#      - name: (spring common) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
+#        if: env.enableSpringCommon == 'true'
+#        uses: ./.github/actions/scenarios/spring/spring-common
+#      - name: (nacos dynamic config) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
+#        if: ${{ matrix.nacosVersion != '' && env.enableDynamicConfig == 'true' }}
+#        uses: ./.github/actions/scenarios/spring/dynamic-config-nacos
+#      - name: (zk dynamic config) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
+#        if: env.enableDynamicConfig == 'true'
+#        uses: ./.github/actions/scenarios/spring/dynamic-config-zk
       - name: monitor test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
         if: env.enableMonitor == 'true'
         uses: ./.github/actions/scenarios/spring/monitor
