流量标签透传测试demo

--- a/sermant-integration-tests/spring-test/pom.xml
+++ b/sermant-integration-tests/spring-test/pom.xml
@@ -43,6 +43,7 @@
     </properties>
     <modules>
         <module>spring-intergration-test</module>
+        <module>tag-transmission-demo</module>
     </modules>
 
     <profiles>
