流量标签透传测试demo-2

--- a/sermant-integration-tests/spring-test/pom.xml
+++ b/sermant-integration-tests/spring-test/pom.xml
@@ -43,7 +43,6 @@
     </properties>
     <modules>
         <module>spring-intergration-test</module>
-        <module>tag-transmission-demo</module>
     </modules>
 
     <profiles>
@@ -96,6 +95,12 @@
             <modules>
                 <module>spring-common</module>
                 <module>spring-common-demos</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>tag-transmission-test</id>
+            <modules>
+                <module>tag-transmission-demo</module>
             </modules>
         </profile>
     </profiles>
