--- a/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/src/main/resources/application.properties
@@ -9,3 +9,5 @@ inner.servicecomb.url=
 outer.servicecomb.url=
 inner.sofarpc.url=
 outer.sofarpc.url=
+inner.grpc.server.port=50001
+outer.grpc.server.port=50002
