流量标签透传测试demo-3

--- a/sermant-integration-tests/spring-test/tag-transmission-demo/alibaba-dubbo-provider-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/alibaba-dubbo-provider-demo/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-innerServerUrl=http://127.0.0.1:8082/tomcat/httpserver
-outerServerUrl=
-commonServerUrl=http://127.0.0.1:8080/common/httpserver
+commonServerUrl=http://127.0.0.1:9040/common/httpserver
+sofaRpcUrl=http://127.0.0.1:9041/outer/sofaRpc
