--- a/sermant-integration-tests/spring-test/tag-transmission-demo/httpserver-jetty-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/httpserver-jetty-demo/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-server.port=8083
-
-innerServerUrl=http://127.0.0.1:8083/jetty/httpserver
-outerServerUrl=
-commonServerUrl=http://127.0.0.1:8080/common/httpserver
+server.port=9043
+commonServerUrl=http://127.0.0.1:9040/common/httpserver
+apacheDubboUrl=http://127.0.0.1:9041/outer/dubbo
