--- a/sermant-integration-tests/spring-test/spring-intergration-test/pom.xml
+++ b/sermant-integration-tests/spring-test/spring-intergration-test/pom.xml
@@ -40,6 +40,12 @@
             <version>2.2.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba.nacos</groupId>
