--- a/sermant-integration-tests/spring-test/tag-transmission-demo/alibaba-dubbo-consumer-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/alibaba-dubbo-consumer-demo/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-commonServerUrl="http://127.0.0.1:8080/common/httpserver"
+commonServerUrl=http://127.0.0.1:9040/common/httpserver
+sofaRpcUrl=http://127.0.0.1:9041/inner/sofaRpc
