--- a/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-server.port=8081
+server.port=9041
 sofarpc.server.port = 12000
 
-innerServerUrl=http://127.0.0.1:8081/inner/httpserver
-outerServerUrl=http://127.0.0.1:8082/tomcat/httpserver
-commonServerUrl=http://127.0.0.1:8080/common/httpserver
-
-inner.servicecomb.url=
-outer.servicecomb.url=
-inner.sofarpc.url=
-outer.sofarpc.url=
+innerServerUrl=http://127.0.0.1:9041/innerServer/httpserver
+outerServerUrl=http://127.0.0.1:9042/outerServer/httpserver
+commonServerUrl=http://127.0.0.1:9040/common/httpserver
+jettyServerUrl=http://127.0.0.1:9043/common/httpserver
+inner.servicecomb.url=http://127.0.0.1:9041/innerProvider/sayHello
+outer.servicecomb.url=http://127.0.0.1:9042/outerProvider/sayHello
+inner.sofarpc.url=bolt://127.0.0.1:12000
+outer.sofarpc.url=bolt://127.0.0.1:12001
 inner.grpc.server.port=50001
 outer.grpc.server.port=50002
+alibabaDubooUrl=http://127.0.0.1:9044/alibabaDubbo/innerHello
+serviceCombUrl=http://127.0.0.1:9041/inner/serviceComb
