--- a/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-server-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-server-demo/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=9081
+server.port=9042
 sofarpc.server.port = 12001
 grpc.server.port=50002
-
-commonServerUrl=http://127.0.0.1:8080/common/httpserver
+alibabaDubooUrl=http://127.0.0.1:9044/alibabaDubbo/outerHello
+serviceCombUrl=http://127.0.0.1:9041/outer/serviceComb
+commonServerUrl=http://127.0.0.1:9040/common/httpserver
+query.rocketmq.tag.url=http://127.0.0.1:9041/produce/queryRocketmq
+query.kafka.tag.url=http://127.0.0.1:9041/produce/queryKafka
