--- a/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/pom.xml
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/pom.xml
@@ -26,11 +26,22 @@
         <common.log.version>1.2</common.log.version>
         <rocketmq-client.version>5.1.0</rocketmq-client.version>
         <kafka-client.version>2.7.0</kafka-client.version>
-        <servicecomb.version>2.8.3</servicecomb.version>
         <failureaccess.version>1.0.1</failureaccess.version>
+        <yaml.snakeyaml.version>1.33</yaml.snakeyaml.version>
+        <hibernate.version>6.2.5.Final</hibernate.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${yaml.snakeyaml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.huawei.spring.test</groupId>
             <artifactId>tag-transmission-common-lib</artifactId>
@@ -104,22 +115,18 @@
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>java-chassis-spring-boot-starter-servlet</artifactId>
-            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>solution-basic</artifactId>
-            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>registry-service-center</artifactId>
-            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>servicestage-environment</artifactId>
-            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
