--- a/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/tag-transmission-client-demo/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=9041
 sofarpc.server.port = 12000
+inner.grpc.server.port=50001
+outer.grpc.server.port=50002
 
 innerServerUrl=http://127.0.0.1:9041/innerServer/httpserver
 outerServerUrl=http://127.0.0.1:9042/outerServer/httpserver
 commonServerUrl=http://127.0.0.1:9040/common/httpserver
-jettyServerUrl=http://127.0.0.1:9043/common/httpserver
-inner.servicecomb.url=http://127.0.0.1:9041/innerProvider/sayHello
-outer.servicecomb.url=http://127.0.0.1:9042/outerProvider/sayHello
-inner.sofarpc.url=bolt://127.0.0.1:12000
-outer.sofarpc.url=bolt://127.0.0.1:12001
-inner.grpc.server.port=50001
-outer.grpc.server.port=50002
-alibabaDubooUrl=http://127.0.0.1:9044/alibabaDubbo/innerHello
+jettyServerUrl=http://127.0.0.1:9043/jetty/httpserver
+innerServicecombUrl=http://127.0.0.1:9041/innerProvider/sayHello
+outerServicecombUrl=http://127.0.0.1:9042/outerProvider/sayHello
+innerSofaRpcUrl=bolt://127.0.0.1:12000
+outerSofaRpcUrl=bolt://127.0.0.1:12001
+alibabaDubooUrl=http://127.0.0.1:9044/alibabaDubbo/inner
 serviceCombUrl=http://127.0.0.1:9041/inner/serviceComb
