流量标签透传测试部分demo-7

--- a/sermant-integration-tests/spring-test/tag-transmission-demo/httpserver-common-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/httpserver-common-demo/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=9040
+traffic.tag.key[0]=id
+traffic.tag.key[1]=dynamic
+traffic.tag.key[2]=x-sermant-test
+traffic.tag.key[3]=tag-sermant
