--- a/.github/actions/common/spring/action.yml
+++ b/.github/actions/common/spring/action.yml
@@ -43,6 +43,36 @@ runs:
       run: |
         tar -zxf nacos-server-1.4.2.tar.gz
         bash nacos/bin/startup.sh -m standalone
+    - name: download kafka
+      uses: actions/cache@v3
+      with:
+        path: kafka_2.13-2.7.0.tgz
+        key: ${{ runner.os }}-kafka_2.13-2.7.0
+        restore-keys: |
+          ${{ runner.os }}-kafka_2.13-2.7.0
+    - name start kafka
+      shell: bash
+      run: |
+        tar -zxf kafka_2.13-2.7.0.tgz
+        bash kafka_2.13-2.7.0/bin/kafka-server-start.sh config/server.properties
+    - name: download rocketmq
+        uses: actions/cache@v3
+        with:
+          path: rocketmq-all-4.8.0-source-release.zip
+          key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+          restore-keys: |
+            ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+    - name start rocketmq server
+      shell: bash
+      run: |
+        unzip rocketmq-all-4.8.0-source-release.zip
+        sed -i 's/-Xms4g -Xmx4g -Xms2g/-Xms1g -Xmx1g -Xms1g/g' rocketmq-all-4.8.0-source-release/bin/runserver.sh
+        bash rocketmq-all-4.8.0-source-release/bin/mqnamesrv.sh
+    - name start rocketmq broker
+      shell: bash
+      run: |
+        sed -i 's/-Xms8g -Xmx8g -Xms4g/-Xms1g -Xmx1g -Xms1g/g' rocketmq-all-4.8.0-source-release/bin/runbroker.sh
+        bash rocketmq-all-4.8.0-source-release/bin/mqbroker -n localhost:9876
     - name: cache dependencies
       uses: actions/cache@v3
       with:
