--- a/.github/workflows/spring_integration_test_2.yml
+++ b/.github/workflows/spring_integration_test_2.yml
@@ -162,3 +162,37 @@ jobs:
       - name: (spring lane) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
         if: env.enableSpringLane == 'true'
         uses: ./.github/actions/scenarios/spring/lane
+  test-for-tag-transmission:
+    name: Test for tag transmission
+    runs-on: ubuntu-latest
+    needs: [build-agent-and-cache, download-midwares-and-cache]
+    strategy:
+      matrix:
+        include:
+          - springBootVersion: "1.5.0.RELEASE"
+          - springBootVersion: "2.0.2.RELEASE"
+            httpClientVersion: "4.1.3"
+            nacosVersion: "2.0.0.RELEASE"
+          - springBootVersion: "2.1.0.RELEASE"
+            springCloudVersion: "Greenwich.RELEASE"
+            httpClientVersion: "4.2.6"
+            nacosVersion: "2.1.0.RELEASE"
+          - springBootVersion: "2.2.0.RELEASE"
+            springCloudVersion: "Hoxton.RELEASE"
+            httpClientVersion: "4.3.6"
+            nacosVersion: "2.2.0.RELEASE"
+          - springBootVersion: "2.3.0.RELEASE"
+            springCloudVersion: "Hoxton.RELEASE"
+            httpClientVersion: "4.4.1"
+            nacosVersion: "2.2.8.RELEASE"
+          - springBootVersion: "2.4.0"
+            springCloudVersion: "2020.0.0"
+            httpClientVersion: "4.5.6"
+            nacosVersion: "2021.0.1.0"
+          - springBootVersion: "2.6.2"
+            springCloudVersion: "2021.0.0"
+            httpClientVersion: "4.5.10"
+            nacosVersion: "2021.1"
+          - springBootVersion: "2.7.2"
+            springCloudVersion: "2021.0.3"
+            httpClientVersion: "4.5.13"
