--- a/sermant-integration-tests/spring-test/pom.xml
+++ b/sermant-integration-tests/spring-test/pom.xml
@@ -38,6 +38,8 @@
         <spring.cloud.version>Hoxton.RELEASE</spring.cloud.version>
         <httpclient.async.version>4.1.4</httpclient.async.version>
         <httpclient.version>4.5.13</httpclient.version>
+        <!--tag-transmission-demo 组件版本-->
+        <servicecomb.version>2.8.3</servicecomb.version>
         <!--不变的版本-->
         <processor.version>2.2.0.RELEASE</processor.version>
     </properties>
