--- a/sermant-integration-tests/spring-test/tag-transmission-demo/pom.xml
+++ b/sermant-integration-tests/spring-test/tag-transmission-demo/pom.xml
@@ -17,6 +17,16 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <servicecomb.version>2.8.3</servicecomb.version>
+        <httpclient3x.version>3.1</httpclient3x.version>
+        <httpclient4x.version>4.5.13</httpclient4x.version>
+        <okhttpv2.version>2.7.5</okhttpv2.version>
+        <apache.dubbo.version>2.7.15</apache.dubbo.version>
+        <sofarpc.version>5.10.0</sofarpc.version>
+        <rocketmq-client.version>5.1.0</rocketmq-client.version>
+        <kafka-client.version>2.7.0</kafka-client.version>
+        <alibaba.dubbo.version>2.6.12</alibaba.dubbo.version>
+        <grpc.version>1.52.1</grpc.version>
+        <protobuf.version>3.21.7</protobuf.version>
     </properties>
 
     <dependencyManagement>
@@ -64,6 +74,7 @@
     </build>
 
     <modules>
+        <module>tag-transmission-common-lib</module>
         <module>tag-transmission-client-demo</module>
         <module>httpserver-jetty-demo</module>
         <module>httpserver-common-demo</module>
