流量标签透传demo

--- a/sermant-integration-tests/pom.xml
+++ b/sermant-integration-tests/pom.xml
@@ -32,5 +32,6 @@
         <module>agentcore-test</module>
         <module>dubbo-test</module>
         <module>spring-test</module>
+        <module>tag-transmission-test</module>
     </modules>
 </project>
