--- a/sermant-integration-tests/tag-transmission-test/okhttp-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/okhttp-demo/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
             <artifactId>okhttp</artifactId>
+            <version>${okhttpv2.version}</version>
         </dependency>
     </dependencies>
 
