--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -1,6 +1,6 @@
-name: Spring Integration Test2
+name: Tagtransmission integration test
 env:
-  projectSpringBootVersion: 2.2.0.RELEASE
+  projectSpringBootVersion: 2.7.15
   sermantVersion: 1.0.0
 on:
   push:
@@ -10,11 +10,8 @@ on:
     paths:
       - 'sermant-agentcore/**'
       - 'sermant-integration-tests/**'
-      - 'sermant-plugins/sermant-router/**'
-      - 'sermant-plugins/sermant-service-registry/**'
-      - 'sermant-plugins/sermant-springboot-registry/**'
       - 'sermant-plugins/sermant-tag-transmission/**'
-      - '.github/workflows/spring_integration*.yml'
+      - '.github/workflows/tagtransmission_integration_test.yml'
       - '.github/actions/**'
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}-${{ github.head_ref }}
@@ -58,6 +55,28 @@ jobs:
         run: |
           export ROOT_PATH=$(pwd)
           bash ./sermant-integration-tests/scripts/tryDownloadMidware.sh nacos
+      - name: cache rocketmq
+          uses: actions/cache@v3
+          with:
+            path: rocketmq-all-4.8.0-source-release.zip
+            key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+            restore-keys: |
+              ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+      - name: download rocketmq
+        run: |
+          export ROOT_PATH=$(pwd)
+          bash ./sermant-integration-tests/scripts/tryDownloadMidware.sh rocketmq
+      - name: cache kafka
+          uses: actions/cache@v3
+          with:
+            path: kafka_2.13-2.7.0.tgz
+            key: ${{ runner.os }}-kafka_2.13-2.7.0
+            restore-keys: |
+              ${{ runner.os }}-kafka_2.13-2.7.0
+      - name: download kafka
+        run: |
+          export ROOT_PATH=$(pwd)
+          bash ./sermant-integration-tests/scripts/tryDownloadMidware.sh kafka
   build-agent-and-cache:
     name: build agent and cache
     runs-on: ubuntu-latest
@@ -80,44 +99,17 @@ jobs:
           sed -i '/sermant-backend-lite/d' pom.xml
           sed -i '/sermant-integration-tests/d' pom.xml
           sed -i '/sermant-injector/d' pom.xml
+          sed -i '/sermant-flowcontrol/d' sermant-plugins/pom.xml
           mvn package -DskipTests -Ptest --file pom.xml
-  test-for-spring:
-    name: Test for spring
+  test-for-tag-transmission-httpclient3.x:
+    name: Test for tag transmission httpclient3.x
     runs-on: ubuntu-latest
-    needs: [ build-agent-and-cache, download-midwares-and-cache ]
+    needs: [build-agent-and-cache, download-midwares-and-cache]
     strategy:
       matrix:
         include:
-          - springBootVersion: "1.5.0.RELEASE"
-            springCloudVersion: "Edgware.SR2"
-            nacosVersion: "1.5.0.RELEASE"
-          - springBootVersion: "2.0.2.RELEASE"
-            springCloudVersion: "Finchley.RELEASE"
-            httpClientVersion: "4.1.3"
-            nacosVersion: "2.0.0.RELEASE"
-          - springBootVersion: "2.1.0.RELEASE"
-            springCloudVersion: "Greenwich.RELEASE"
-            httpClientVersion: "4.2.6"
-            nacosVersion: "2.1.0.RELEASE"
-          - springBootVersion: "2.2.0.RELEASE"
-            springCloudVersion: "Hoxton.RELEASE"
-            httpClientVersion: "4.3.6"
-            nacosVersion: "2.2.0.RELEASE"
-          - springBootVersion: "2.3.0.RELEASE"
-            springCloudVersion: "Hoxton.RELEASE"
-            httpClientVersion: "4.4.1"
-            nacosVersion: "2.2.8.RELEASE"
-          - springBootVersion: "2.4.0"
-            springCloudVersion: "2020.0.0"
-            httpClientVersion: "4.5.6"
-            nacosVersion: "2021.0.1.0"
-          - springBootVersion: "2.6.2"
-            springCloudVersion: "2021.0.0"
-            httpClientVersion: "4.5.10"
-            nacosVersion: "2021.1"
-          - springBootVersion: "2.7.2"
-            springCloudVersion: "2021.0.3"
-            httpClientVersion: "4.5.13"
+          - httpClientVersion: "3.0.1"
+          - httpClientVersion: "3.1"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -127,16 +119,7 @@ jobs:
         run: |
           echo "javaVersion=8" >> $GITHUB_ENV
       - name: common operations
-        uses: ./.github/actions/common/spring
-      - name: (spring router) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableSpringRouter == 'true'
+        uses: ./.github/actions/common/tag-transmission
+      - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
+        if: env.enableTagTransmission == 'true'
         uses: ./.github/actions/scenarios/spring/router/spring-router
-      - name: (spring tag router) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableSpringTagRouter == 'true'
-        uses: ./.github/actions/scenarios/spring/router/spring-tag-router
-      - name: (spring tag az router) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableSpringTagRouter == 'true'
-        uses: ./.github/actions/scenarios/spring/router/spring-tag-az-router
-      - name: (spring lane) test for springboot=${{ matrix.springBootVersion }} springCloudVersion=${{ matrix.springCloudVersion }}
-        if: env.enableSpringLane == 'true'
-        uses: ./.github/actions/scenarios/spring/lane
