--- a/sermant-integration-tests/tag-transmission-test/apache-dubbo-consumer-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/apache-dubbo-consumer-demo/pom.xml
@@ -24,18 +24,22 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>${apache.dubbo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
+            <version>${curator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
+            <version>${curator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-x-discovery</artifactId>
+            <version>${curator.version}</version>
         </dependency>
         <dependency>
             <groupId>com.huaweicloud.sermant.tagtransmission</groupId>
