--- a/sermant-integration-tests/tag-transmission-test/grpc-client-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/grpc-client-demo/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <failureaccess.version>1.0.1</failureaccess.version>
     </properties>
 
     <dependencies>
@@ -24,6 +25,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>failureaccess</artifactId>
+            <version>${failureaccess.version}</version>
         </dependency>
     </dependencies>
 
