--- a/sermant-integration-tests/tag-transmission-test/grpc-server-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/grpc-server-demo/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <failureaccess.version>1.0.1</failureaccess.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,11 @@
         <dependency>
             <groupId>com.huaweicloud.sermant.tagtransmission</groupId>
             <artifactId>tag-transmission-util-demo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>failureaccess</artifactId>
+            <version>${failureaccess.version}</version>
         </dependency>
     </dependencies>
 
