--- a/sermant-integration-tests/tag-transmission-test/httpclientv4-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/httpclientv4-demo/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <version>${httpclient4x.version}</version>
         </dependency>
     </dependencies>
 
