--- a/sermant-integration-tests/tag-transmission-test/httpserver-common-demo/src/main/resources/application.properties
+++ b/sermant-integration-tests/tag-transmission-test/httpserver-common-demo/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 server.port=9040
-traffic.tag.key[0]=id
-traffic.tag.key[1]=dynamic
-traffic.tag.key[2]=x-sermant-test
-traffic.tag.key[3]=tag-sermant
+traffic.tag.key=id,dynamic,x-sermant-test,tag-sermant
