--- a/sermant-integration-tests/tag-transmission-test/kafka-producer-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/kafka-producer-demo/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
+            <version>${kafka-client.version}</version>
         </dependency>
     </dependencies>
 
