--- a/sermant-integration-tests/tag-transmission-test/rocketmq-consumer-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/rocketmq-consumer-demo/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
+            <version>${rocketmq-client.version}</version>
         </dependency>
     </dependencies>
 
