--- a/sermant-integration-tests/tag-transmission-test/servicecomb-provider-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/servicecomb-provider-demo/pom.xml
@@ -20,18 +20,22 @@
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>java-chassis-spring-boot-starter-servlet</artifactId>
+            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>solution-basic</artifactId>
+            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>registry-service-center</artifactId>
+            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicecomb</groupId>
             <artifactId>servicestage-environment</artifactId>
+            <version>${servicecomb.version}</version>
         </dependency>
         <dependency>
             <groupId>com.huaweicloud.sermant.tagtransmission</groupId>
