--- a/sermant-integration-tests/tag-transmission-test/sofarpc-consumer-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/sofarpc-consumer-demo/pom.xml
@@ -29,6 +29,7 @@
         <dependency>
             <groupId>com.alipay.sofa</groupId>
             <artifactId>sofa-rpc-all</artifactId>
+            <version>${sofarpc.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
