grpc集成测试脚本

--- a/.github/actions/common/plugin-change-check/action.yml
+++ b/.github/actions/common/plugin-change-check/action.yml
@@ -199,5 +199,6 @@ runs:
           echo "enableSpringLane=true" >> $GITHUB_ENV
           echo "enableDubboLane=true" >> $GITHUB_ENV
           echo "enableRemoval=true" >> $GITHUB_ENV
+          echo "enableTagTransmission=true" >> $GITHUB_ENV
         fi
 
