--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -56,23 +56,23 @@ jobs:
           export ROOT_PATH=$(pwd)
           bash ./sermant-integration-tests/scripts/tryDownloadMidware.sh nacos
       - name: cache rocketmq
-          uses: actions/cache@v3
-          with:
-            path: rocketmq-all-4.8.0-source-release.zip
-            key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
-            restore-keys: |
-              ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+        uses: actions/cache@v3
+        with:
+          path: rocketmq-all-4.8.0-source-release.zip
+          key: ${{ runner.os }}-rocketmq-all-4.8.0-source-release
+          restore-keys: |
+            ${{ runner.os }}-rocketmq-all-4.8.0-source-release
       - name: download rocketmq
         run: |
           export ROOT_PATH=$(pwd)
           bash ./sermant-integration-tests/scripts/tryDownloadMidware.sh rocketmq
       - name: cache kafka
-          uses: actions/cache@v3
-          with:
-            path: kafka_2.13-2.7.0.tgz
-            key: ${{ runner.os }}-kafka_2.13-2.7.0
-            restore-keys: |
-              ${{ runner.os }}-kafka_2.13-2.7.0
+        uses: actions/cache@v3
+        with:
+          path: kafka_2.13-2.7.0.tgz
+          key: ${{ runner.os }}-kafka_2.13-2.7.0
+          restore-keys: |
+            ${{ runner.os }}-kafka_2.13-2.7.0
       - name: download kafka
         run: |
           export ROOT_PATH=$(pwd)
@@ -101,15 +101,92 @@ jobs:
           sed -i '/sermant-injector/d' pom.xml
           sed -i '/sermant-flowcontrol/d' sermant-plugins/pom.xml
           mvn package -DskipTests -Ptest --file pom.xml
-  test-for-tag-transmission-httpclient3.x:
-    name: Test for tag transmission httpclient3.x
+#  test-for-tag-transmission-httpclientv3:
+#    name: Test for tag transmission httpclientv3
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - httpClientVersion: "3.0.1"
+#          - httpClientVersion: "3.1"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/httpclientv3
+#  test-for-tag-transmission-httpclientv4:
+#    name: Test for tag transmission httpclientv4
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - httpClientVersion: "4.3.6"
+#          - httpClientVersion: "4.4.1"
+#          - httpClientVersion: "4.5.14"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/httpclientv4
+#  test-for-tag-transmission-okhttp:
+#    name: Test for tag transmission okhttp
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - okHttpVersion: "2.0.0"
+#          - okHttpVersion: "2.1.0"
+#          - okHttpVersion: "2.2.0"
+#          - okHttpVersion: "2.3.0"
+#          - okHttpVersion: "2.4.0"
+#          - okHttpVersion: "2.5.0"
+#          - okHttpVersion: "2.6.0"
+#          - okHttpVersion: "2.7.5"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for okHttpVersion=${{ matrix.okHttpVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/okhttp
+  test-for-tag-transmission-grpc:
+    name: Test for tag transmission grpc
     runs-on: ubuntu-latest
     needs: [build-agent-and-cache, download-midwares-and-cache]
     strategy:
       matrix:
         include:
-          - httpClientVersion: "3.0.1"
-          - httpClientVersion: "3.1"
+          - grpcVersion: "1.13.1"
+          - grpcVersion: "1.21.0"
+          - grpcVersion: "1.31.0"
+          - grpcVersion: "1.41.0"
+          - grpcVersion: "1.52.1"
+          - grpcVersion: "1.58.0"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -120,60 +197,6 @@ jobs:
           echo "javaVersion=8" >> $GITHUB_ENV
       - name: common operations
         uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
+      - name: tag transmission test for grpcVersion=${{ matrix.grpcVersion}}
         if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/httpclientv3
-  test-for-tag-transmission-httpclient4.x:
-    name: Test for tag transmission httpclient4.x
-    runs-on: ubuntu-latest
-    needs: [build-agent-and-cache, download-midwares-and-cache]
-    strategy:
-      matrix:
-        include:
-          - httpClientVersion: "4.0.3"
-          - httpClientVersion: "4.1.3"
-          - httpClientVersion: "4.2.6"
-          - httpClientVersion: "4.3.6"
-          - httpClientVersion: "4.4.1"
-          - httpClientVersion: "4.5.14"
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 100
-      - name: set java version to environment
-        run: |
-          echo "javaVersion=8" >> $GITHUB_ENV
-      - name: common operations
-        uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for httpClientVersion=${{ matrix.httpClientVersion }}
-        if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/httpclientv4
-  test-for-tag-transmission-okhttp:
-    name: Test for tag transmission okhttp
-    runs-on: ubuntu-latest
-    needs: [build-agent-and-cache, download-midwares-and-cache]
-    strategy:
-      matrix:
-        include:
-          - okHttpVersion: "2.0.0"
-          - okHttpVersion: "2.1.0"
-          - okHttpVersion: "2.2.0"
-          - okHttpVersion: "2.3.0"
-          - okHttpVersion: "2.4.0"
-          - okHttpVersion: "2.5.0"
-          - okHttpVersion: "2.6.0"
-          - okHttpVersion: "2.7.5"
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 100
-      - name: set java version to environment
-        run: |
-          echo "javaVersion=8" >> $GITHUB_ENV
-      - name: common operations
-        uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for okHttpVersion=${{ matrix.okHttpVersion }}
-        if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/okhttp
+        uses: ./.github/actions/scenarios/tag-transmission/grpc
