--- a/sermant-integration-tests/tag-transmission-test/tag-transmission-integration-test/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/tag-transmission-integration-test/pom.xml
@@ -40,5 +40,11 @@
             <version>4.3.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
