rpc、crossthread、config集成测试脚本-run-1

--- a/.github/actions/scenarios/tag-transmission/grpc/action.yml
+++ b/.github/actions/scenarios/tag-transmission/grpc/action.yml
@@ -48,7 +48,7 @@ runs:
       uses: actions/upload-artifact@v3
       if: ${{ failure() || cancelled() }}
       with:
-        name: (${{ github.job }})-tag-transmission-httpclientv3-(${{ matrix.httpClientVersion }}-logs
+        name: (${{ github.job }})-tag-transmission-grpc-(${{ matrix.grpcVersion }}-logs
         path: |
           ./*.log
           ./logs/**
