--- a/.github/actions/scenarios/tag-transmission/crossthread/action.yml
+++ b/.github/actions/scenarios/tag-transmission/crossthread/action.yml
@@ -42,7 +42,7 @@ runs:
       uses: actions/upload-artifact@v3
       if: ${{ failure() || cancelled() }}
       with:
-        name: (${{ github.job }})-tag-transmission-httpclientv3-(${{ matrix.httpClientVersion }}-logs
+        name: (${{ github.job }})-tag-transmission-crossthread-logs
         path: |
           ./*.log
           ./logs/**
