--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -174,32 +174,32 @@ jobs:
 #      - name: tag transmission test for okHttpVersion=${{ matrix.okHttpVersion }}
 #        if: env.enableTagTransmission == 'true'
 #        uses: ./.github/actions/scenarios/tag-transmission/okhttp
-  test-for-tag-transmission-grpc:
-    name: Test for tag transmission grpc
-    runs-on: ubuntu-latest
-    needs: [build-agent-and-cache, download-midwares-and-cache]
-    strategy:
-      matrix:
-        include:
-          - grpcVersion: "1.13.1"
-          - grpcVersion: "1.21.0"
-          - grpcVersion: "1.31.0"
-          - grpcVersion: "1.41.0"
-          - grpcVersion: "1.52.1"
-          - grpcVersion: "1.58.0"
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 100
-      - name: set java version to environment
-        run: |
-          echo "javaVersion=8" >> $GITHUB_ENV
-      - name: common operations
-        uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for grpcVersion=${{ matrix.grpcVersion }}
-        if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/grpc
+#  test-for-tag-transmission-grpc:
+#    name: Test for tag transmission grpc
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - grpcVersion: "1.13.1"
+#          - grpcVersion: "1.21.0"
+#          - grpcVersion: "1.31.0"
+#          - grpcVersion: "1.41.0"
+#          - grpcVersion: "1.52.1"
+#          - grpcVersion: "1.58.0"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for grpcVersion=${{ matrix.grpcVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/grpc
   test-for-tag-transmission-sofarpc:
     name: Test for tag transmission grpc
     runs-on: ubuntu-latest
