--- a/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-provider-demo/src/main/resources/application.yaml
+++ b/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-provider-demo/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ dubbo:
     name: alibaba-dubbo-provider
     qos-port: 33336
   registry:
-    address: zookeeper://localhost:2181
+    address: zookeeper://127.0.0.1:2181
   protocol:
     name: dubbo
     port: -1
