--- a/sermant-integration-tests/tag-transmission-test/apache-dubbo-consumer-demo/src/main/resources/application.yaml
+++ b/sermant-integration-tests/tag-transmission-test/apache-dubbo-consumer-demo/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ dubbo:
     name: apache-dubbo-consumer
     qos-port: 33333
   registry:
-    address: zookeeper://localhost:2181
+    address: zookeeper://127.0.0.1:2181
   protocol:
     name: dubbo
     port: -1
