--- a/sermant-integration-tests/tag-transmission-test/apache-dubbo-provider-demo/src/main/resources/application.yaml
+++ b/sermant-integration-tests/tag-transmission-test/apache-dubbo-provider-demo/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ dubbo:
     name: apache-dubbo-provider
     qos-port: 33334
   registry:
-    address: zookeeper://localhost:2181
+    address: zookeeper://127.0.0.1:2181
   protocol:
     name: dubbo
     port: -1
