--- a/.github/actions/scenarios/tag-transmission/alibaba-dubbo/action.yml
+++ b/.github/actions/scenarios/tag-transmission/alibaba-dubbo/action.yml
@@ -25,6 +25,7 @@ runs:
     - name: start alibabadubbo consumer demo
       shell: bash
       run: |
+        sleep 5s
         nohup java -javaagent:sermant-agent-${{ env.sermantVersion }}/agent/sermant-agent.jar=appName=default -jar \
         -Dsermant_log_dir=${{ env.logDir }}/alibaba-dubbo-consumer \
         sermant-integration-tests/tag-transmission-test/alibaba-dubbo-consumer-demo/target/alibaba-dubbo-consumer-demo.jar > ${{ env.logDir}}/alibaba-dubbo-consumer.log 2>&1 &
