--- a/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-provider-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-provider-demo/pom.xml
@@ -44,6 +44,11 @@
             <version>${alibaba.dubbo.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+        </dependency>
+        <dependency>
             <groupId>com.huaweicloud.sermant.tagtransmission</groupId>
             <artifactId>rpc-api-demo</artifactId>
         </dependency>
