--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -339,66 +339,16 @@ jobs:
 #      - name: tag transmission test for config
 #        if: env.enableTagTransmission == 'true'
 #        uses: ./.github/actions/scenarios/tag-transmission/config
-#  test-for-tag-transmission-kafka:
-#    name: Test for tag transmission kafka
-#    runs-on: ubuntu-latest
-#    needs: [build-agent-and-cache, download-midwares-and-cache]
-#    strategy:
-#      matrix:
-#        include:
-#          - kafkaVersion: "2.3.1"
-#          - kafkaVersion: "1.1.1"
-#          - kafkaVersion: "2.7.2"
-#      fail-fast: false
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 100
-#      - name: set java version to environment
-#        run: |
-#          echo "javaVersion=8" >> $GITHUB_ENV
-#      - name: common operations
-#        uses: ./.github/actions/common/tag-transmission
-#      - name: tag transmission test for kafkaVersion=${{ matrix.kafkaVersion }}
-#        if: env.enableTagTransmission == 'true'
-#        uses: ./.github/actions/scenarios/tag-transmission/kafka
-#  test-for-tag-transmission-rocketmq:
-#    name: Test for tag transmission rocketmq
-#    runs-on: ubuntu-latest
-#    needs: [build-agent-and-cache, download-midwares-and-cache]
-#    strategy:
-#      matrix:
-#        include:
-#          - rocketMqVersion: "4.8.0"
-#          - rocketMqVersion: "4.9.7"
-#          - rocketMqVersion: "5.0.0"
-#          - rocketMqVersion: "5.1.4"
-#      fail-fast: false
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 100
-#      - name: set java version to environment
-#        run: |
-#          echo "javaVersion=8" >> $GITHUB_ENV
-#      - name: common operations
-#        uses: ./.github/actions/common/tag-transmission
-#      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
-#        if: env.enableTagTransmission == 'true'
-#        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
-  test-for-tag-transmission-jdkhttp-jetty:
-    name: Test for tag transmission jdkhttp and jetty
+  test-for-tag-transmission-kafka:
+    name: Test for tag transmission kafka
     runs-on: ubuntu-latest
     needs: [build-agent-and-cache, download-midwares-and-cache]
     strategy:
       matrix:
         include:
-          - apacheDubboVersion: "2.7.5"
-          - apacheDubboVersion: "2.7.15"
-          - apacheDubboVersion: "2.7.23"
-          - apacheDubboVersion: "3.0.15"
-          - apacheDubboVersion: "3.1.11"
-          - apacheDubboVersion: "3.2.7"
+          - kafkaVersion: "2.3.1"
+          - kafkaVersion: "1.1.1"
+          - kafkaVersion: "2.7.2"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -409,22 +359,20 @@ jobs:
           echo "javaVersion=8" >> $GITHUB_ENV
       - name: common operations
         uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for apacheDubboVersion=${{ matrix.apacheDubboVersion}}
+      - name: tag transmission test for kafkaVersion=${{ matrix.kafkaVersion }}
         if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/apache-dubbo
-  test-for-tag-transmission-jdkhttp-tomcat:
-    name: Test for tag transmission apachedubbo
+        uses: ./.github/actions/scenarios/tag-transmission/kafka
+  test-for-tag-transmission-rocketmq:
+    name: Test for tag transmission rocketmq
     runs-on: ubuntu-latest
     needs: [build-agent-and-cache, download-midwares-and-cache]
     strategy:
       matrix:
         include:
-          - apacheDubboVersion: "2.7.5"
-          - apacheDubboVersion: "2.7.15"
-          - apacheDubboVersion: "2.7.23"
-          - apacheDubboVersion: "3.0.15"
-          - apacheDubboVersion: "3.1.11"
-          - apacheDubboVersion: "3.2.7"
+          - rocketMqVersion: "4.8.0"
+          - rocketMqVersion: "4.9.7"
+          - rocketMqVersion: "5.0.0"
+          - rocketMqVersion: "5.1.4"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -435,6 +383,58 @@ jobs:
           echo "javaVersion=8" >> $GITHUB_ENV
       - name: common operations
         uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for apacheDubboVersion=${{ matrix.apacheDubboVersion}}
+      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
         if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/apache-dubbo
+        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
+#  test-for-tag-transmission-jdkhttp-jetty:
+#    name: Test for tag transmission jdkhttp and jetty
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - springBootVersion: "2.7.5"
+#          - apacheDubboVersion: "2.7.15"
+#          - apacheDubboVersion: "2.7.23"
+#          - apacheDubboVersion: "3.0.15"
+#          - apacheDubboVersion: "3.1.11"
+#          - apacheDubboVersion: "3.2.7"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for springBootVersion=${{ matrix.springBootVersion}}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/jdkhttp-and-jetty
+#  test-for-tag-transmission-jdkhttp-tomcat:
+#    name: Test for tag transmission apachedubbo
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - apacheDubboVersion: "2.7.5"
+#          - apacheDubboVersion: "2.7.15"
+#          - apacheDubboVersion: "2.7.23"
+#          - apacheDubboVersion: "3.0.15"
+#          - apacheDubboVersion: "3.1.11"
+#          - apacheDubboVersion: "3.2.7"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: common operations
+#        uses: ./.github/actions/common/tag-transmission
+#      - name: tag transmission test for apacheDubboVersion=${{ matrix.apacheDubboVersion}}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/apache-dubbo
