--- a/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-consumer-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-consumer-demo/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <zkclient.version>0.10</zkclient.version>
     </properties>
 
     <dependencies>
@@ -45,7 +46,7 @@
         <dependency>
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
-            <version>0.10</version>
+            <version>${zkclient.version}</version>
         </dependency>
         <dependency>
             <groupId>com.huaweicloud.sermant.tagtransmission</groupId>
