--- a/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-provider-demo/pom.xml
+++ b/sermant-integration-tests/tag-transmission-test/alibaba-dubbo-provider-demo/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <tag-transmission.version>1.0.0</tag-transmission.version>
+        <zkclient.version>0.10</zkclient.version>
     </properties>
 
     <dependencies>
@@ -46,7 +47,7 @@
         <dependency>
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
-            <version>0.10</version>
+            <version>${zkclient.version}</version>
         </dependency>
         <dependency>
             <groupId>com.huaweicloud.sermant.tagtransmission</groupId>
