--- a/.github/actions/scenarios/tag-transmission/alibaba-dubbo/action.yml
+++ b/.github/actions/scenarios/tag-transmission/alibaba-dubbo/action.yml
@@ -8,7 +8,7 @@ runs:
       with:
         log-dir: ./logs/tag-transmission/alibaba-dubbo
     - name: alibaba.dubbo.version != 2.6.0
-      if: matrix.alibabaDubboVersion != 2.6.0
+      if: matrix.alibabaDubboVersion != '2.6.0'
       shell: bash
       run: |
         sed -i '/<dependency>/{:a;N;/<\/dependency>/!ba};/<groupId>com.101tec<\/groupId>\s*<artifactId>zkclient<\/artifactId>/d' \
