--- a/.github/actions/scenarios/tag-transmission/kafka/action.yml
+++ b/.github/actions/scenarios/tag-transmission/kafka/action.yml
@@ -7,22 +7,18 @@ runs:
       uses: ./.github/actions/common/entry
       with:
         log-dir: ./logs/tag-transmission/kafka
-    - name: Set up JDK ${{ env.javaVersion }}
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ env.javaVersion }}
-        distribution: 'adopt'
-        cache: maven
-    - name: download zookeeper
+    - name: download kafka
       uses: actions/cache@v3
       with:
-        path: apache-zookeeper-3.6.3-bin.tar.gz
-        key: ${{ runner.os }}-apache-zookeeper-3.6.3
-    - name: run zookeeper
+        path: kafka_2.13-2.7.0.tgz
+        key: ${{ runner.os }}-kafka_2.13-2.7.0
+        restore-keys: |
+          ${{ runner.os }}-kafka_2.13-2.7.0
+    - name: start kafka
       shell: bash
       run: |
-        tar -zxf apache-zookeeper-3.6.3-bin.tar.gz
-        bash apache-zookeeper-3.6.3-bin/bin/zkServer.sh start apache-zookeeper-3.6.3-bin/conf/zoo_sample.cfg
+        tar -zxf kafka_2.13-2.7.0.tgz
+        nohup bash kafka_2.13-2.7.0/bin/kafka-server-start.sh kafka_2.13-2.7.0/config/server.properties &
     - name: package demos
       shell: bash
       run: |
@@ -31,7 +27,7 @@ runs:
     - name: start common httpserver
       shell: bash
       run: |
-        nohup java -jar sermant-integration-tests/tag-transmission-test/httpserver-common-demo/target/httpserver-common-demo.jar > ${{ env.logDir}}/httpserver-common-demo.log 2>&1 &
+        nohup java -jar sermant-integration-tests/tag-transmission-test/httpserver-common-demo/target/httpserver-common-demo.jar > ${{ env.logDir }}/httpserver-common-demo.log 2>&1 &
     - name: start kafka producer demo
       shell: bash
       run: |
@@ -43,7 +39,7 @@ runs:
       run: |
         nohup java -javaagent:sermant-agent-${{ env.sermantVersion }}/agent/sermant-agent.jar=appName=default -jar \
         -Dsermant_log_dir=${{ env.logDir }}/kafka-consumer \
-        sermant-integration-tests/tag-transmission-test/kafka-consumer-demo/target/kafka-consumer-demo.jar > ${{ env.logDir}}/kafka-consumer.log 2>&1 &
+        sermant-integration-tests/tag-transmission-test/kafka-consumer-demo/target/kafka-consumer-demo.jar > ${{ env.logDir }}/kafka-consumer.log 2>&1 &
     - name: waiting for services start
       shell: bash
       run: |
