--- a/.github/workflows/tagtransmission_integration_test.yml
+++ b/.github/workflows/tagtransmission_integration_test.yml
@@ -362,17 +362,43 @@ jobs:
 #      - name: tag transmission test for kafkaVersion=${{ matrix.kafkaVersion }}
 #        if: env.enableTagTransmission == 'true'
 #        uses: ./.github/actions/scenarios/tag-transmission/kafka
-  test-for-tag-transmission-rocketmq:
-    name: Test for tag transmission rocketmq
+#  test-for-tag-transmission-rocketmq:
+#    name: Test for tag transmission rocketmq
+#    runs-on: ubuntu-latest
+#    needs: [build-agent-and-cache, download-midwares-and-cache]
+#    strategy:
+#      matrix:
+#        include:
+#          - rocketMqVersion: "4.8.0"
+#          - rocketMqVersion: "4.9.7"
+#          - rocketMqVersion: "5.0.0"
+#          - rocketMqVersion: "5.1.4"
+#      fail-fast: false
+#    steps:
+#      - uses: actions/checkout@v3
+#        with:
+#          fetch-depth: 100
+#      - name: set java version to environment
+#        run: |
+#          echo "javaVersion=8" >> $GITHUB_ENV
+#      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
+#        if: env.enableTagTransmission == 'true'
+#        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
+  test-for-tag-transmission-jdkhttp-jetty:
+    name: Test for tag transmission jdkhttp and jetty
     runs-on: ubuntu-latest
     needs: [build-agent-and-cache, download-midwares-and-cache]
     strategy:
       matrix:
         include:
-          - rocketMqVersion: "4.8.0"
-          - rocketMqVersion: "4.9.7"
-          - rocketMqVersion: "5.0.0"
-          - rocketMqVersion: "5.1.4"
+          - springBootVersion: "1.0.2.RELEASE"
+          - springBootVersion: "1.1.12.RELEASE"
+          - springBootVersion: "1.3.8.RELEASE"
+          - springBootVersion: "1.4.7.RELEASE"
+          - springBootVersion: "1.5.22.RELEASE"
+          - springBootVersion: "2.2.0.RELEASE"
+          - springBootVersion: "2.4.13"
+          - springBootVersion: "2.7.16"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -381,60 +407,36 @@ jobs:
       - name: set java version to environment
         run: |
           echo "javaVersion=8" >> $GITHUB_ENV
-#      - name: common operations
-#        uses: ./.github/actions/common/tag-transmission
-      - name: tag transmission test for rocketMqVersion=${{ matrix.rocketMqVersion }}
+      - name: common operations
+        uses: ./.github/actions/common/tag-transmission
+      - name: tag transmission test for springBootVersion=${{ matrix.springBootVersion }}
         if: env.enableTagTransmission == 'true'
-        uses: ./.github/actions/scenarios/tag-transmission/rocketmq
-#  test-for-tag-transmission-jdkhttp-jetty:
-#    name: Test for tag transmission jdkhttp and jetty
-#    runs-on: ubuntu-latest
-#    needs: [build-agent-and-cache, download-midwares-and-cache]
-#    strategy:
-#      matrix:
-#        include:
-#          - springBootVersion: "2.7.5"
-#          - apacheDubboVersion: "2.7.15"
-#          - apacheDubboVersion: "2.7.23"
-#          - apacheDubboVersion: "3.0.15"
-#          - apacheDubboVersion: "3.1.11"
-#          - apacheDubboVersion: "3.2.7"
-#      fail-fast: false
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 100
-#      - name: set java version to environment
-#        run: |
-#          echo "javaVersion=8" >> $GITHUB_ENV
-#      - name: common operations
-#        uses: ./.github/actions/common/tag-transmission
-#      - name: tag transmission test for springBootVersion=${{ matrix.springBootVersion}}
-#        if: env.enableTagTransmission == 'true'
-#        uses: ./.github/actions/scenarios/tag-transmission/jdkhttp-and-jetty
-#  test-for-tag-transmission-jdkhttp-tomcat:
-#    name: Test for tag transmission apachedubbo
-#    runs-on: ubuntu-latest
-#    needs: [build-agent-and-cache, download-midwares-and-cache]
-#    strategy:
-#      matrix:
-#        include:
-#          - apacheDubboVersion: "2.7.5"
-#          - apacheDubboVersion: "2.7.15"
-#          - apacheDubboVersion: "2.7.23"
-#          - apacheDubboVersion: "3.0.15"
-#          - apacheDubboVersion: "3.1.11"
-#          - apacheDubboVersion: "3.2.7"
-#      fail-fast: false
-#    steps:
-#      - uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 100
-#      - name: set java version to environment
-#        run: |
-#          echo "javaVersion=8" >> $GITHUB_ENV
-#      - name: common operations
-#        uses: ./.github/actions/common/tag-transmission
-#      - name: tag transmission test for apacheDubboVersion=${{ matrix.apacheDubboVersion}}
-#        if: env.enableTagTransmission == 'true'
-#        uses: ./.github/actions/scenarios/tag-transmission/apache-dubbo
+        uses: ./.github/actions/scenarios/tag-transmission/jdkhttp-jetty
+  test-for-tag-transmission-jdkhttp-tomcat:
+    name: Test for tag transmission jdkhttp and tomcat
+    runs-on: ubuntu-latest
+    needs: [build-agent-and-cache, download-midwares-and-cache]
+    strategy:
+      matrix:
+        include:
+          - springBootVersion: "1.0.2.RELEASE"
+          - springBootVersion: "1.1.12.RELEASE"
+          - springBootVersion: "1.3.8.RELEASE"
+          - springBootVersion: "1.4.7.RELEASE"
+          - springBootVersion: "1.5.22.RELEASE"
+          - springBootVersion: "2.2.0.RELEASE"
+          - springBootVersion: "2.4.13"
+          - springBootVersion: "2.7.16"
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 100
+      - name: set java version to environment
+        run: |
+          echo "javaVersion=8" >> $GITHUB_ENV
+      - name: common operations
+        uses: ./.github/actions/common/tag-transmission
+      - name: tag transmission test for springBootVersion=${{ matrix.springBootVersion }}
+        if: env.enableTagTransmission == 'true'
+        uses: ./.github/actions/scenarios/tag-transmission/jdkhttp-tomcat
